# mp3tag

./: Cargo.toml  README.md
src/: cli.rs  config.rs  main.rs  models.rs
src/core/: mod.rs  parser.rs  renamer.rs  scanner.rs  tagger.rs
src/gui/: app.rs  mod.rs
src/sources/: melon.rs  mod.rs  spotify.rs
