[package]
name = "mp3tag"
version = "0.1.0"
edition = "2021"

[features]
default = ["gui"]
gui = ["dep:eframe", "dep:egui", "dep:egui_extras", "dep:image", "dep:rfd"]

[dependencies]
# ID3 tags
id3 = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP
reqwest = { version = "0.12", features = ["blocking", "json"] }

# JSON / serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
toml = "0.8"

# Table output
comfy-table = "7"

# Interactive selection
dialoguer = "0.11"

# Base64 (Spotify auth)
base64 = "0.22"

# HTML parsing
scraper = "0.22"

# Error handling
anyhow = "1"

# GUI (optional)
eframe = { version = "0.29", optional = true }
egui = { version = "0.29", optional = true }
egui_extras = { version = "0.29", features = ["image"], optional = true }
image = { version = "0.25", optional = true }
rfd = { version = "0.15", optional = true }
